# tcm-readpassphrase-vendored

./: Cargo.toml  LICENSE  README.md  build.rs
.githook/: pre-commit
.github/workflows/: ci.yaml
csrc/: readpassphrase.c
src/: lib.rs
